# llvm-passes

./: .clang-format  .gitignore  CMakeLists.txt  ConvertFCmpEq.cpp  DuplicateBB.cpp  DynamicCallCounter.cpp  FindFCmpEq.cpp  FindFCmpEq.h  HelloWorld.cpp  InjectFuncCall.cpp  MBAAdd.cpp  MBASub.cpp  MergeBB.cpp  OpcodeCounter.cpp  README.md  RIV.cpp  RIV.h  StaticCallCounter.cpp  run-convert-fcmp-eq.sh  run-duplicate-bb.sh  run-dynamic-call-counter.sh  run-find-fcmp-eq.sh  run-hello-world.sh  run-inject-func-call.sh  run-mba-add.sh  run-mba-sub.sh  run-merge-bb-with-duplicate-bb.sh  run-merge-bb.sh  run-opcode-counter.sh  run-riv.sh  run-static-call-counter.sh  script.kaleidoscope  test_object_code.cpp
inputs/: build-bitcode.sh  build.sh  input_for_cc.c  input_for_cc.ll  input_for_duplicate_bb.c  input_for_duplicate_bb.ll  input_for_fcmp_eq.c  input_for_fcmp_eq.ll  input_for_hello.c  input_for_hello.ll  input_for_mba_add.ll  input_for_mba_sub.ll  input_for_riv.c  input_for_riv.ll
kaleidoscope/: KaleidoscopeJIT.h  ast.cpp  ast.h  lexer.cpp  lexer.h  library.h  main.cpp  parser.cpp  parser.h
kaleidoscope/examples/: fib.kaleidoscope  mandel.kaleidoscope
